--- a/src/index.css
+++ b/src/index.css
@@ -14,22 +14,25 @@ nav {
     height: 100vh;
     background-color: rgb(43, 43, 63);
     color: rgb(255, 255, 255);
-    text-align: center;
-    display: flex;
+    width: 50px;
+    margin-right: 20px;
+    display: flex; 
     justify-content: space-between;
     flex-direction: column;
-
+    text-align: center;
 }
 
 nav .logo-container,
 nav .controls-container {
-    padding: 40px, 25px;
-    display: flex;
-    flex-direction: column;
+    padding: 40px, 50px;
 }
 
 nav .logo-container img {
-    width: 20px;
+    width: 30px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav .icon {
